# DCNv2-Windows

./: .gitignore  CMakeLists.txt  README.md  _ext.cp37-win_amd64.pyd  dcn_v2.py  setup.py  testcpu.py  testcuda.py
src/: vision.cpp
src/cpu/: dcn_v2_cpu.cpp  dcn_v2_psroi_pooling_cpu.cpp  vision.h
src/cuda/: dcn_v2_cuda.cu  dcn_v2_im2col_cuda.cu
